# meme_coin_bots

./: .gitignore  README.md  requirements.txt  setup.py
bots/: solambo.py  (+1 more)
signal_composer/: .env.example  docker-compose.yml  pyproject.toml  requirements.txt
signal_composer/examples/: btc_sol_crossover.json  sample_strategy.json
signal_composer/scripts/: add_wallet.py  demo_api.py  test_birdeye.py  test_btc.py  test_crossover_strategy.py  test_loader.py
signal_composer/src/: cli.py
signal_composer/src/api/: __init__.py  dependencies.py  main.py
signal_composer/src/data/: loader.py  tokens.py
signal_composer/src/db/: __init__.py  connection.py  models.py
signal_composer/src/live_trading/: __init__.py  coordinator.py  session.py  state_machine.py
signal_composer/src/paper_trading/: __init__.py  manager.py  session.py
signal_composer/src/simulation/: __init__.py  backtest.py  executor.py  metrics.py  persistence.py  portfolio.py
signal_composer/src/trading/: __init__.py  base_session.py
signal_composer/src/wallets/: __init__.py  encryption.py  keypair.py  reserve.py
signal_composer/tests/: conftest.py  test_integration.py
signal_composer/tests/api/: conftest.py  test_auth.py  test_jwt.py  test_performance.py  test_strategies.py  test_trades.py  test_wallet.py
signal_composer/tests/data/: test_price_loader.py  test_tokens.py
signal_composer/tests/db/: conftest.py  test_base_repository.py  test_full_integration.py  test_performance_repository.py  test_persistence.py  test_strategy_repository.py  test_trade_repository.py  test_user_repository.py
(+120 files in other folders)
