[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-composer"
version = "0.1.0"
description = "Composable trading strategy marketplace"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "alembic>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[project.scripts]
signal-composer = "src.cli:main"
